manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissertation-ai
  namespace : bits-dissertation
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: dissertation-ai
  ports:
    - port: 80
      targetPort: 8888
      nodePort: 30007
